# affinity-test

./: .clang-format  .gitignore  CMakeLists.txt  README.md  affinity_test.cu  bench.py  bench.sh  run
docker/: Dockerfile.amd  run
results/: bench.csv  bench_amd.csv
